--- a/views/education.html
+++ b/views/education.html
@@ -131,7 +131,7 @@
 		toggleSwitch.addEventListener('change', toggleLightDark, false);
 
 		function isDark() {
-			console.log('cookie: ' + document.cookie);
+			console.log('cookie: ' + document.cookie + ' end');
 			return document.cookie.match(/theme=dark/i) != null;
 		}
 
