--- a/styles/dark-pages.css
+++ b/styles/dark-pages.css
@@ -21,7 +21,7 @@ header img {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  border: 1px solid #4c573f;
+  border: 1px solid #effae5;
   float: left;
   margin: 10px;
 }
