--- a/styles/light-pages.css
+++ b/styles/light-pages.css
@@ -32,13 +32,22 @@ header a {
 }
 
 footer img {
-  width: 75px;
-  height: 75px;
+  width: 30px;
+  height: 30px;
+  transition: 0.3s;
+  padding: 10px;
+}
+
+footer img:hover {
+  width: 30px;
+  height: 30px;
+  box-shadow: 0 1px 16px 0 #91917b; 
+  border-radius: 5px;
 }
 
 a {
   text-decoration: none;
-  color: #a833b9;
+  color: #b622cd;
 }
 
 a:hover {
