--- a/styles/dark-home.css
+++ b/styles/dark-home.css
@@ -4,7 +4,8 @@ html {
 
 body {
   height: 100%;
-  background-image: linear-gradient(#051205, #212e10);
+  width: 100%;
+  background-image: linear-gradient(#051205, #415B20);
   background-repeat: no-repeat;
   background-attachment: fixed;
   resize: vertical;
@@ -50,9 +51,18 @@ margin-bottom: 1px;
 }
 
 footer img {
-  width: 75px;
-  height: 75px;
-  filter:invert(180%);
+  width: 30px;
+  height: 30px;
+  filter:invert(100%);
+  transition: 0.3s;
+  padding: 10px;
+}
+
+footer img:hover {
+  width: 30px;
+  height: 30px;
+  box-shadow: 0 1px 16px 0 #91917b; 
+  border-radius: 5px;
 }
 
 .centerpiece {
