--- a/styles/dark-pages.css
+++ b/styles/dark-pages.css
@@ -12,7 +12,7 @@ body {
 header {
   position: sticky;
   top: 0;
-  background-image: linear-gradient(#051205, #212e10);
+  background-image: linear-gradient(#051205, #415B20);
   height: 125px;
   z-index: 1;
 }
@@ -32,14 +32,23 @@ header a {
 }
 
 footer img {
-  width: 75px;
-  height: 75px;
-  filter:invert(180%);
+  width: 30px;
+  height: 30px;
+  filter:invert(100%);
+  transition: 0.3s;
+  padding: 10px;
+}
+
+footer img:hover {
+  width: 30px;
+  height: 30px;
+  box-shadow: 0 8px 16px 0 #91917b; 
+  border-radius: 5px;
 }
 
 a {
   text-decoration: none;
-  color: #ff39b6;
+  color: #FFA400;
 }
 
 a:hover {
