--- a/styles/light-pages.css
+++ b/styles/light-pages.css
@@ -103,6 +103,10 @@ a:hover {
   cursor: pointer;
 }
 
+.card:focus {
+  box-shadow: 0 4px 8px 0 rgb(250, 5, 5);
+}
+
 /* since project cards are actually links, need to specify text to not look
 like a link */
 .project-card {
