--- a/styles/dark-pages.css
+++ b/styles/dark-pages.css
@@ -120,3 +120,10 @@ like a link */
   filter: invert(100%);
   z-index: -1;
 }
+
+.project-img {
+  height: 50px;
+  width: 50px;
+  padding: 5px;
+  filter: invert(100%);
+}
